# qpmpc_layers

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  developer-notes.html  environment.yml  examples.html  genindex.html  index.html  installation.html  layers.html  module.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: developer-notes.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  layers.doctree  module.doctree  usage.doctree
.github/workflows/: ci.yml  docs.yml
_sources/: developer-notes.rst.txt  index.rst.txt  installation.rst.txt  module.rst.txt  usage.rst.txt
docs/: .gitignore  Makefile  conf.py  examples.rst  installation.rst  layers.rst
docs/figures/: qp-sim-cost.dot
examples/: 1d_car.py  pi_balancer_tuning.py  triple_integrator_forward.py  triple_integrator_learn_timestep.py  wheeled_inverted_pendulum.py
qpmpc_layers/: __init__.py  exceptions.py  plants.py  qplayer.py  utils.py
qpmpc_layers/integration/: __init__.py  start.py  step.py
qpmpc_layers/lti/: __init__.py  integrator.py  optimal_control_problem.py
qpmpc_layers/optimal_control/: __init__.py  start.py  step.py  terminate.py  wrap.py
qpmpc_layers/types/: __init__.py  constraint.py  dynamics.py  integration_map.py  qp.py  qp_res.py  stage_cost.py  terminal_cost.py
sandbox/: lti_system.py  matrix_derivative.py  qplayer_sudoku.py  state_observer.py
tests/: test_constraint.py  test_dynamics.py  test_integration_step.py  test_lti_integrator.py  test_optimal_control_step.py  test_qp.py  test_stage_cost.py  test_terminal_cost.py
