[project]
name = "qpmpc_layers"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@inria.fr"},
    {name = "Valentin Tordjman--Levavasseur", email = "valentin.tordjman-levavasseur@inria.fr"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ['version', 'description']
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "proxsuite >=0.6.1",
    "qpsolvers >=1.8.0",
    "torch >=2.4.1",
]
keywords = ["differentiable", "model", "predictive", "control", "linear", "time-varying"]

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "qpmpc_layers"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.dependencies]
python = "<3.12"  # for ProxSuite PyPI wheels
valmix = "*"

[tool.pixi.pypi-dependencies]
qpmpc_layers = { path = ".", editable = true }

[tool.pixi.feature.coverage.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.pixi.feature.coverage.tasks]
coverage = "pytest --cov=qpmpc_layers --cov-report=html"
coverage-open = { cmd = "xdg-open htmlcov/index.html", depends-on = "coverage" }

[tool.pixi.feature.docs.dependencies]
sphinx = ">=8.0.0"
sphinx-autodoc-typehints = "*"

[tool.pixi.feature.docs.pypi-dependencies]
sphinx-material = "*"
sphinx-mathjax-offline = "*"

[tool.pixi.feature.docs.tasks]
figures = "cd docs && make"
docs = { cmd = "sphinx-build docs/ docs/_build -W", depends-on = "figures" }
docs-open = { cmd = "xdg-open docs/_build/index.html", depends-on = "docs" }

[tool.pixi.feature.lint.dependencies]
ruff = "*"

[tool.pixi.feature.lint.tasks]
lint = "ruff check qpmpc_layers"

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.test.tasks]
test = "pytest ."

[tool.pixi.environments]
coverage = { features = ["coverage"], solve-group = "default" }
default = { features = [], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
lint = { features = ["lint"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = [
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pydocstyle
    "D"
]

[tool.ruff.lint.pydocstyle]
convention = "google"
